# fastapi-intro

./: .gitignore  LICENSE  README.md  pyproject.toml
app/: main.py
fastapi_intro/: main.py
templates/: page.html
tests/: test_fastapi_intro.py
