[tool.poetry]
name = "fastapi-intro"
version = "0.1.0"
description = ""
authors = ["Shahmi Majid <shahmi.majid@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
python-multipart = "^0.0.5"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
flake8 = "^4.0.1"
black = "^21.9b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
